fix: EndPoint создание подборки - работает, тесты выполняются